src/main/java/net/stencilproject/template/TemplateParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g 2010-12-06 14:34:39
package net.stencilproject.template;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class TemplateParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SCOPE_LOOKUP", "LIST", "TEMPLATE_LITERAL", "PRINT", "UNARY_PLUS", "UNARY_MINUS", "TEMPLATE_COMMENT", "ID", "WS", "TEMPLATE_RAW", "TEMPLATE_STATEMENT_START", "TEMPLATE_STATEMENT_END", "TEMPLATE_PRINT_START", "TEMPLATE_PRINT_END", "IF", "FOR", "IN", "AS", "ELSE", "ELIF", "END", "INCLUDE", "LIMIT", "VAR", "CONTINUE", "EXTENDS", "BLOCK", "TRUE", "FALSE", "NULL", "IAND", "IOR", "AND", "OR", "NOT", "ORDER", "BY", "TO", "EQ", "EQEQ", "NE", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "LSQUARE", "RSQUARE", "LPAREN", "RPAREN", "DOT", "QDOT", "DOLLAR", "TILDE", "LSHIFT", "RSHIFT", "XOR", "COLON", "SQUOTE", "DQUOTE", "SEMI", "COMMA", "QUESTION", "PIPE", "INT", "HEX_DIGIT", "INT_HEX", "EXPONENT", "FLOAT", "COMMENT", "ESC_SEQ", "STRING", "HEX_ESC", "UNICODE_ESC"
    };
    public static final int DOLLAR=60;
    public static final int EXPONENT=75;
    public static final int LT=45;
    public static final int LSQUARE=54;
    public static final int ORDER=39;
    public static final int MOD=53;
    public static final int LIMIT=26;
    public static final int GTE=48;
    public static final int TEMPLATE_PRINT_END=17;
    public static final int DQUOTE=67;
    public static final int FOR=19;
    public static final int FLOAT=76;
    public static final int TEMPLATE_PRINT_START=16;
    public static final int SCOPE_LOOKUP=4;
    public static final int NOT=38;
    public static final int ID=11;
    public static final int AND=36;
    public static final int EOF=-1;
    public static final int LTE=46;
    public static final int LPAREN=56;
    public static final int UNARY_PLUS=8;
    public static final int IF=18;
    public static final int INT_HEX=74;
    public static final int AS=21;
    public static final int RPAREN=57;
    public static final int ESC_SEQ=78;
    public static final int IN=20;
    public static final int CONTINUE=28;
    public static final int COMMA=69;
    public static final int INCLUDE=25;
    public static final int TILDE=61;
    public static final int PIPE=71;
    public static final int PLUS=49;
    public static final int VAR=27;
    public static final int EQ=42;
    public static final int COMMENT=77;
    public static final int DOT=58;
    public static final int RSHIFT=63;
    public static final int EQEQ=43;
    public static final int NE=44;
    public static final int BY=40;
    public static final int QDOT=59;
    public static final int XOR=64;
    public static final int TEMPLATE_COMMENT=10;
    public static final int TO=41;
    public static final int LSHIFT=62;
    public static final int UNICODE_ESC=81;
    public static final int NULL=33;
    public static final int ELSE=22;
    public static final int HEX_DIGIT=73;
    public static final int UNARY_MINUS=9;
    public static final int INT=72;
    public static final int TEMPLATE_STATEMENT_START=14;
    public static final int SQUOTE=66;
    public static final int RSQUARE=55;
    public static final int MINUS=50;
    public static final int LIST=5;
    public static final int SEMI=68;
    public static final int MUL=51;
    public static final int TRUE=31;
    public static final int PRINT=7;
    public static final int IAND=34;
    public static final int COLON=65;
    public static final int HEX_ESC=80;
    public static final int ELIF=23;
    public static final int TEMPLATE_RAW=13;
    public static final int WS=12;
    public static final int QUESTION=70;
    public static final int BLOCK=30;
    public static final int OR=37;
    public static final int GT=47;
    public static final int TEMPLATE_LITERAL=6;
    public static final int IOR=35;
    public static final int DIV=52;
    public static final int END=24;
    public static final int FALSE=32;
    public static final int TEMPLATE_STATEMENT_END=15;
    public static final int EXTENDS=29;
    public static final int STRING=79;

    // delegates
    // delegators


        public TemplateParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TemplateParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return TemplateParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g"; }


    public static class string_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "string"
    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:155:1: string : STRING ;
    public final TemplateParser.string_return string() throws RecognitionException {
        TemplateParser.string_return retval = new TemplateParser.string_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token STRING1=null;

        Object STRING1_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:156:2: ( STRING )
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:156:4: STRING
            {
            root_0 = (Object)adaptor.nil();

            STRING1=(Token)match(input,STRING,FOLLOW_STRING_in_string1198); 
            STRING1_tree = new StringNode(STRING1) ;
            adaptor.addChild(root_0, STRING1_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "string"

    public static class template_literal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "template_literal"
    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:159:1: template_literal : TEMPLATE_LITERAL ;
    public final TemplateParser.template_literal_return template_literal() throws RecognitionException {
        TemplateParser.template_literal_return retval = new TemplateParser.template_literal_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TEMPLATE_LITERAL2=null;

        Object TEMPLATE_LITERAL2_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:160:2: ( TEMPLATE_LITERAL )
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:160:4: TEMPLATE_LITERAL
            {
            root_0 = (Object)adaptor.nil();

            TEMPLATE_LITERAL2=(Token)match(input,TEMPLATE_LITERAL,FOLLOW_TEMPLATE_LITERAL_in_template_literal1212); 
            TEMPLATE_LITERAL2_tree = new TemplateLiteralNode(TEMPLATE_LITERAL2) ;
            adaptor.addChild(root_0, TEMPLATE_LITERAL2_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "template_literal"

    public static class template_statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "template_statement"
    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:163:1: template_statement : TEMPLATE_STATEMENT_START statements TEMPLATE_STATEMENT_END ;
    public final TemplateParser.template_statement_return template_statement() throws RecognitionException {
        TemplateParser.template_statement_return retval = new TemplateParser.template_statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TEMPLATE_STATEMENT_START3=null;
        Token TEMPLATE_STATEMENT_END5=null;
        TemplateParser.statements_return statements4 = null;


        Object TEMPLATE_STATEMENT_START3_tree=null;
        Object TEMPLATE_STATEMENT_END5_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:164:2: ( TEMPLATE_STATEMENT_START statements TEMPLATE_STATEMENT_END )
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:164:4: TEMPLATE_STATEMENT_START statements TEMPLATE_STATEMENT_END
            {
            root_0 = (Object)adaptor.nil();

            TEMPLATE_STATEMENT_START3=(Token)match(input,TEMPLATE_STATEMENT_START,FOLLOW_TEMPLATE_STATEMENT_START_in_template_statement1226); 
            TEMPLATE_STATEMENT_START3_tree = (Object)adaptor.create(TEMPLATE_STATEMENT_START3);
            root_0 = (Object)adaptor.becomeRoot(TEMPLATE_STATEMENT_START3_tree, root_0);

            pushFollow(FOLLOW_statements_in_template_statement1229);
            statements4=statements();

            state._fsp--;

            adaptor.addChild(root_0, statements4.getTree());
            TEMPLATE_STATEMENT_END5=(Token)match(input,TEMPLATE_STATEMENT_END,FOLLOW_TEMPLATE_STATEMENT_END_in_template_statement1231); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "template_statement"

    public static class template_print_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "template_print"
    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:167:1: template_print : TEMPLATE_PRINT_START expression ( COMMA expression )* TEMPLATE_PRINT_END ;
    public final TemplateParser.template_print_return template_print() throws RecognitionException {
        TemplateParser.template_print_return retval = new TemplateParser.template_print_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TEMPLATE_PRINT_START6=null;
        Token COMMA8=null;
        Token TEMPLATE_PRINT_END10=null;
        TemplateParser.expression_return expression7 = null;

        TemplateParser.expression_return expression9 = null;


        Object TEMPLATE_PRINT_START6_tree=null;
        Object COMMA8_tree=null;
        Object TEMPLATE_PRINT_END10_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:168:2: ( TEMPLATE_PRINT_START expression ( COMMA expression )* TEMPLATE_PRINT_END )
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:168:4: TEMPLATE_PRINT_START expression ( COMMA expression )* TEMPLATE_PRINT_END
            {
            root_0 = (Object)adaptor.nil();

            TEMPLATE_PRINT_START6=(Token)match(input,TEMPLATE_PRINT_START,FOLLOW_TEMPLATE_PRINT_START_in_template_print1243); 
            TEMPLATE_PRINT_START6_tree = (Object)adaptor.create(TEMPLATE_PRINT_START6);
            root_0 = (Object)adaptor.becomeRoot(TEMPLATE_PRINT_START6_tree, root_0);

            pushFollow(FOLLOW_expression_in_template_print1246);
            expression7=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression7.getTree());
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:168:37: ( COMMA expression )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==COMMA) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:168:38: COMMA expression
            	    {
            	    COMMA8=(Token)match(input,COMMA,FOLLOW_COMMA_in_template_print1249); 
            	    pushFollow(FOLLOW_expression_in_template_print1252);
            	    expression9=expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, expression9.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            TEMPLATE_PRINT_END10=(Token)match(input,TEMPLATE_PRINT_END,FOLLOW_TEMPLATE_PRINT_END_in_template_print1256); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "template_print"

    public static class template_comment_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "template_comment"
    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:171:1: template_comment : TEMPLATE_COMMENT ;
    public final TemplateParser.template_comment_return template_comment() throws RecognitionException {
        TemplateParser.template_comment_return retval = new TemplateParser.template_comment_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TEMPLATE_COMMENT11=null;

        Object TEMPLATE_COMMENT11_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:172:2: ( TEMPLATE_COMMENT )
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:172:4: TEMPLATE_COMMENT
            {
            root_0 = (Object)adaptor.nil();

            TEMPLATE_COMMENT11=(Token)match(input,TEMPLATE_COMMENT,FOLLOW_TEMPLATE_COMMENT_in_template_comment1269); 
            TEMPLATE_COMMENT11_tree = (Object)adaptor.create(TEMPLATE_COMMENT11);
            adaptor.addChild(root_0, TEMPLATE_COMMENT11_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "template_comment"

    public static class template_raw_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "template_raw"
    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:175:1: template_raw : TEMPLATE_RAW ;
    public final TemplateParser.template_raw_return template_raw() throws RecognitionException {
        TemplateParser.template_raw_return retval = new TemplateParser.template_raw_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TEMPLATE_RAW12=null;

        Object TEMPLATE_RAW12_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:176:2: ( TEMPLATE_RAW )
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:176:4: TEMPLATE_RAW
            {
            root_0 = (Object)adaptor.nil();

            TEMPLATE_RAW12=(Token)match(input,TEMPLATE_RAW,FOLLOW_TEMPLATE_RAW_in_template_raw1281); 
            TEMPLATE_RAW12_tree = new TemplateRawNode(TEMPLATE_RAW12) ;
            adaptor.addChild(root_0, TEMPLATE_RAW12_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "template_raw"

    public static class template_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "template"
    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:179:1: template : ( template_literal | template_statement | template_comment | template_raw | template_print )* EOF ;
    public final TemplateParser.template_return template() throws RecognitionException {
        TemplateParser.template_return retval = new TemplateParser.template_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF18=null;
        TemplateParser.template_literal_return template_literal13 = null;

        TemplateParser.template_statement_return template_statement14 = null;

        TemplateParser.template_comment_return template_comment15 = null;

        TemplateParser.template_raw_return template_raw16 = null;

        TemplateParser.template_print_return template_print17 = null;


        Object EOF18_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:180:2: ( ( template_literal | template_statement | template_comment | template_raw | template_print )* EOF )
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:180:4: ( template_literal | template_statement | template_comment | template_raw | template_print )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:180:4: ( template_literal | template_statement | template_comment | template_raw | template_print )*
            loop2:
            do {
                int alt2=6;
                switch ( input.LA(1) ) {
                case TEMPLATE_LITERAL:
                    {
                    alt2=1;
                    }
                    break;
                case TEMPLATE_STATEMENT_START:
                    {
                    alt2=2;
                    }
                    break;
                case TEMPLATE_COMMENT:
                    {
                    alt2=3;
                    }
                    break;
                case TEMPLATE_RAW:
                    {
                    alt2=4;
                    }
                    break;
                case TEMPLATE_PRINT_START:
                    {
                    alt2=5;
                    }
                    break;

                }

                switch (alt2) {
            	case 1 :
            	    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:180:5: template_literal
            	    {
            	    pushFollow(FOLLOW_template_literal_in_template1296);
            	    template_literal13=template_literal();

            	    state._fsp--;

            	    adaptor.addChild(root_0, template_literal13.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:181:4: template_statement
            	    {
            	    pushFollow(FOLLOW_template_statement_in_template1301);
            	    template_statement14=template_statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, template_statement14.getTree());

            	    }
            	    break;
            	case 3 :
            	    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:182:4: template_comment
            	    {
            	    pushFollow(FOLLOW_template_comment_in_template1306);
            	    template_comment15=template_comment();

            	    state._fsp--;

            	    adaptor.addChild(root_0, template_comment15.getTree());

            	    }
            	    break;
            	case 4 :
            	    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:183:4: template_raw
            	    {
            	    pushFollow(FOLLOW_template_raw_in_template1311);
            	    template_raw16=template_raw();

            	    state._fsp--;

            	    adaptor.addChild(root_0, template_raw16.getTree());

            	    }
            	    break;
            	case 5 :
            	    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:184:4: template_print
            	    {
            	    pushFollow(FOLLOW_template_print_in_template1316);
            	    template_print17=template_print();

            	    state._fsp--;

            	    adaptor.addChild(root_0, template_print17.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            EOF18=(Token)match(input,EOF,FOLLOW_EOF_in_template1322); 
            EOF18_tree = (Object)adaptor.create(EOF18);
            adaptor.addChild(root_0, EOF18_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "template"

    public static class statements_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statements"
    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:187:1: statements : ( statement ( SEMI ( statements )? )? | blocked_statement ( COLON ( statements )? )? );
    public final TemplateParser.statements_return statements() throws RecognitionException {
        TemplateParser.statements_return retval = new TemplateParser.statements_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SEMI20=null;
        Token COLON23=null;
        TemplateParser.statement_return statement19 = null;

        TemplateParser.statements_return statements21 = null;

        TemplateParser.blocked_statement_return blocked_statement22 = null;

        TemplateParser.statements_return statements24 = null;


        Object SEMI20_tree=null;
        Object COLON23_tree=null;

        try {
            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:188:2: ( statement ( SEMI ( statements )? )? | blocked_statement ( COLON ( statements )? )? )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==ID||(LA7_0>=END && LA7_0<=INCLUDE)||(LA7_0>=VAR && LA7_0<=EXTENDS)||(LA7_0>=TRUE && LA7_0<=NULL)||LA7_0==NOT||LA7_0==EQ||(LA7_0>=PLUS && LA7_0<=MINUS)||LA7_0==LSQUARE||LA7_0==LPAREN||LA7_0==TILDE||LA7_0==INT||LA7_0==INT_HEX||LA7_0==FLOAT||LA7_0==STRING) ) {
                alt7=1;
            }
            else if ( ((LA7_0>=IF && LA7_0<=FOR)||(LA7_0>=ELSE && LA7_0<=ELIF)||LA7_0==BLOCK) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:188:4: statement ( SEMI ( statements )? )?
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_statement_in_statements1331);
                    statement19=statement();

                    state._fsp--;

                    adaptor.addChild(root_0, statement19.getTree());
                    // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:188:14: ( SEMI ( statements )? )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==SEMI) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:188:15: SEMI ( statements )?
                            {
                            SEMI20=(Token)match(input,SEMI,FOLLOW_SEMI_in_statements1334); 
                            // /Users/matthew/Documents/twitrants/stencil/src/com/dotspots/templating/Template.g:188:21: ( statements )?
                            int alt3=2;
                            int LA3_0 = input.LA(1);
